// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiQuickSelect is rendered 1`] = `
<fieldset>
  <EuiTitle
    className="euiQuickSelect__legend"
    size="xxxs"
  >
    <EuiI18n
      defaults={
        Array [
          "Quick select a time range",
          "Quick select",
        ]
      }
      tokens={
        Array [
          "euiQuickSelect.legendLabel",
          "euiQuickSelect.legendText",
        ]
      }
    >
      <Component />
    </EuiI18n>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="flexEnd"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiI18n
        default="Previous time window"
        token="euiQuickSelect.previousLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiI18n
        default="Next time window"
        token="euiQuickSelect.nextLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiI18n
        default="Time tense"
        token="euiQuickSelect.tenseLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiI18n
        default="Time value"
        token="euiQuickSelect.valueLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiI18n
        default="Time unit"
        token="euiQuickSelect.unitLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        aria-describedby="htmlId htmlId"
        className="euiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        <EuiI18n
          default="Apply"
          token="euiQuickSelect.applyButton"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="s"
  />
  <EuiScreenReaderOnly
    id="htmlId"
  >
    <p>
      <EuiI18n
        default="Currently set to {timeTense} {timeValue} {timeUnit}."
        token="euiQuickSelect.fullDescription"
        values={
          Object {
            "timeTense": "last",
            "timeUnit": "minutes",
            "timeValue": 15,
          }
        }
      />
    </p>
  </EuiScreenReaderOnly>
</fieldset>
`;

exports[`EuiQuickSelect prevQuickSelect 1`] = `
<fieldset>
  <EuiTitle
    className="euiQuickSelect__legend"
    size="xxxs"
  >
    <EuiI18n
      defaults={
        Array [
          "Quick select a time range",
          "Quick select",
        ]
      }
      tokens={
        Array [
          "euiQuickSelect.legendLabel",
          "euiQuickSelect.legendText",
        ]
      }
    >
      <Component />
    </EuiI18n>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="flexEnd"
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiI18n
        default="Previous time window"
        token="euiQuickSelect.previousLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiI18n
        default="Next time window"
        token="euiQuickSelect.nextLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiI18n
        default="Time tense"
        token="euiQuickSelect.tenseLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiI18n
        default="Time value"
        token="euiQuickSelect.valueLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiI18n
        default="Time unit"
        token="euiQuickSelect.unitLabel"
      >
        <Component />
      </EuiI18n>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        aria-describedby="htmlId htmlId"
        className="euiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        <EuiI18n
          default="Apply"
          token="euiQuickSelect.applyButton"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="s"
  />
  <EuiScreenReaderOnly
    id="htmlId"
  >
    <p>
      <EuiI18n
        default="Currently set to {timeTense} {timeValue} {timeUnit}."
        token="euiQuickSelect.fullDescription"
        values={
          Object {
            "timeTense": "Next",
            "timeUnit": "months",
            "timeValue": 32,
          }
        }
      />
    </p>
  </EuiScreenReaderOnly>
</fieldset>
`;
